--- a/app/View/Themed/Macnemo/webroot/css/src/theme.scss
+++ b/app/View/Themed/Macnemo/webroot/css/src/theme.scss
@@ -256,13 +256,14 @@ a.textlink {
   margin: 0 auto;
   position: relative;
 
-	font-size: 100%;
   line-height: 1.6em;
 
+  @extend .small;
 	@extend .t_shadow;
 	@extend .c_info_text;
 
 	color: $saito_info_text;
+
 
 	a {
 		border-bottom: #DDD 1px solid;
